fix(backend): updated swaggerUI
